# ws

./: test.bash
install/: local_setup.sh  setup.sh
install/center_msg_pkg/include/center_msg_pkg/center_msg_pkg/msg/: center.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
install/center_msg_pkg/include/center_msg_pkg/center_msg_pkg/msg/detail/: center__builder.hpp  center__rosidl_typesupport_fastrtps_cpp.hpp  center__rosidl_typesupport_introspection_cpp.hpp  center__struct.h  center__struct.hpp  center__type_support.h  singlecenter__builder.hpp  singlecenter__rosidl_typesupport_fastrtps_cpp.hpp  singlecenter__struct.h  singlecenter__struct.hpp  singlecenter__traits.hpp  singlecenter__type_support.cpp  singlecenter__type_support.h
install/center_msg_pkg/local/lib/python3.10/dist-packages/center_msg_pkg/: _center_msg_pkg_s.ep.rosidl_typesupport_introspection_c.c
install/center_msg_pkg/local/lib/python3.10/dist-packages/center_msg_pkg/msg/: __init__.py
install/center_msg_pkg/share/center_msg_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/center_msg_pkg/share/center_msg_pkg/cmake/: ament_cmake_export_libraries-extras.cmake  center_msg_pkgConfig.cmake  center_msg_pkg__rosidl_typesupport_cExport-noconfig.cmake  center_msg_pkg__rosidl_typesupport_cExport.cmake  center_msg_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  center_msg_pkg__rosidl_typesupport_introspection_cppExport.cmake  export_center_msg_pkg__rosidl_generator_cppExport.cmake  export_center_msg_pkg__rosidl_generator_pyExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/center_msg_pkg/share/center_msg_pkg/msg/: Center.idl  Center.msg  Singlecenter.idl
install/test_pkg/lib/test_pkg/: test_node
install/test_pkg/share/test_pkg/: package.sh
install/yolo_xy_pkg/lib/yolo_xy_pkg/: yolo_xy_node
install/yolo_xy_pkg/share/ament_index/resource_index/package_run_dependencies/: yolo_xy_pkg
install/yolo_xy_pkg/share/ament_index/resource_index/parent_prefix_path/: yolo_xy_pkg
install/yolo_xy_pkg/share/yolo_xy_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/yolo_xy_pkg/share/yolo_xy_pkg/cmake/: yolo_xy_pkgConfig.cmake
install/yolo_xy_pkg/share/yolo_xy_pkg/config/: para.yaml
log/: latest_build
src/center_msg_pkg/: CMakeLists.txt
src/test_pkg/: CMakeLists.txt
src/test_pkg/src/: main.cpp
src/yolo_xy_pkg/: CMakeLists.txt  package.xml
src/yolo_xy_pkg/YOLOv8-CPP-Inference/: CMakeLists.txt  main.cpp
src/yolo_xy_pkg/config/: classes.txt  para.yaml
src/yolo_xy_pkg/include/: inference.h
src/yolo_xy_pkg/resource/: classes.txt
src/yolo_xy_pkg/src/: inference.cpp  main.cpp
